basic screen sizes fixed and EPHR implemented